--- a/frontend/spa-build-config.json
+++ b/frontend/spa-build-config.json
@@ -8,6 +8,7 @@
     "@openmrs/esm-form-entry-app": "next",
     "@openmrs/esm-generic-patient-widgets-app": "next",
     "@openmrs/esm-patient-allergies-app": "next",
+    "@openmrs/esm-patient-attachments-app": "next",
     "@openmrs/esm-patient-banner-app": "next",
     "@openmrs/esm-patient-chart-app": "next",
     "@openmrs/esm-patient-conditions-app": "next",
@@ -22,8 +23,6 @@
     "@openmrs/esm-patient-vitals-app": "next",
     "@openmrs/esm-active-visits-app": "next",
     "@openmrs/esm-appointments-app": "next",
-    "@openmrs/esm-service-queues-app": "next",
-    "@openmrs/esm-patient-list-management-app": "next",
     "@openmrs/esm-patient-search-app": "next",
     "@openmrs/esm-openconceptlab-app": "next",
     "@openmrs/esm-system-admin-app": "next",
@@ -31,10 +30,12 @@
     "@openmrs/esm-fast-data-entry-app": "next",
     "@openmrs/esm-cohort-builder-app": "next",
     "@openmrs/esm-form-builder-app": "next",
+    "@openmrs/esm-stock-management-app": "next",
     "@sjthc/esm-patient-registration-app": "5.2.8",
     "@sjthc/esm-patient-list-app": "1.1.1",
-    "@sjthc/esm-reports-app": "1.0.1",
-    "@sjthc/esm-billing-app": "1.0.1"
+    "@sjthc/esm-reports-app": "1.0.2",
+    "@sjthc/esm-billing-app": "1.0.2",
+    "@sjthc/esm-service-queues-app": "1.0.2"
   },
   "spaPath": "$SPA_PATH",
   "apiUrl": "$API_URL",
