--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -22,7 +22,7 @@
     <distro.spaConfigDir>${distro.baseDir}/spa_config</distro.spaConfigDir>
 
     <fhir2.version>2.0.0</fhir2.version>
-    <openmrs.version>2.6.5-SNAPSHOT</openmrs.version>
+    <openmrs.version>2.6.5</openmrs.version>
     <initializer.version>2.7.0-SNAPSHOT</initializer.version>
     <webservices.rest.version>2.43.0-SNAPSHOT</webservices.rest.version>
     <addresshierarchy.version>2.17.0</addresshierarchy.version>
