--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -47,6 +47,6 @@ RUN chmod +x /usr/local/bin/startup.sh
 COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=dev /app/spa /usr/share/nginx/html
-COPY config-core_demo.json /usr/share/nginx/html
+COPY config.json /usr/share/nginx/html
 
 CMD ["/usr/local/bin/startup.sh"]
