--- a/frontend/config.json
+++ b/frontend/config.json
@@ -291,5 +291,35 @@
     "Display conditions": {
       "privileges": ["View Vitals and Biometrics"]
     }
-  }
+  },
+  "@openmrs/esm-patient-orders-app": {
+    "orderEncounterType": "7df67b83-1b84-4fe2-b1b7-794b4e9bfcc3",
+    "extensionSlots": {
+        "order-details-slot": {
+            "configure": {
+                "drug-order-panel": {
+                    "Display conditions": {
+                        "privileges": [
+                            "o3: View Medication Order Form"
+                        ]
+                    }
+                },
+                "lab-order-panel": {
+                    "Display conditions": {
+                        "privileges": [
+                            "o3: View Test Order Form"
+                        ]
+                    }
+                },
+                "procedures-order-panel": {
+                    "Display conditions": {
+                        "privileges": [
+                            "o3: View Procedure Order"
+                        ]
+                    }
+                }
+            }
+        }
+    }
+}
 }
