--- a/frontend/config.json
+++ b/frontend/config.json
@@ -66,7 +66,10 @@
       },
       "extensionSlots": {
         "patient-chart-dashboard-slot": {
-          "remove": ["test-results-summary-dashboard", "results-summary-dashboard"]
+          "remove": ["results-summary-dashboard"]
+        },
+        "action-menu-patient-chart-items-slot": {
+          "order": ["order-basket-action-menu"]
         }
       }
   },
