--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -23,22 +23,22 @@
 
     <!-- track module versions
          we do so here so that we can utilise Maven to track updates, etc. -->
-    <fhir2.version>2.0.0</fhir2.version>
-    <openmrs.version>2.6.5</openmrs.version>
-    <initializer.version>2.7.0</initializer.version>
+    <fhir2.version>2.3.0-SNAPSHOT</fhir2.version>
     <authentication.version>1.0.0</authentication.version>
-    <addresshierarchy.version>2.17.0</addresshierarchy.version>
-    <idgen.version>4.10.0</idgen.version>
-    <legacyui.version>1.16.0</legacyui.version>
+    <openmrs.version>2.6.14-SNAPSHOT</openmrs.version>
+    <initializer.version>2.8.0</initializer.version>
+    <webservices.rest.version>2.48.0-SNAPSHOT</webservices.rest.version>
+    <addresshierarchy.version>2.19.0</addresshierarchy.version>
+    <idgen.version>4.14.0</idgen.version>
+    <legacyui.version>1.22.0-SNAPSHOT</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
-    <metadatasharing.version>1.9.0</metadatasharing.version>
-    <openconceptlab.version>2.3.0</openconceptlab.version>
-    <attachments.version>3.2.0</attachments.version>
-    <referencedemodata.version>2.4.0</referencedemodata.version>
-    <queue.version>2.4.0-SNAPSHOT</queue.version>
-    <appointments.version>2.0.0-SNAPSHOT</appointments.version>
+    <openconceptlab.version>2.4.0</openconceptlab.version>
+    <attachments.version>3.6.0</attachments.version>
+    <referencedemodata.version>2.5.0-SNAPSHOT</referencedemodata.version>
+    <queue.version>2.4.0</queue.version>
+    <appointments.version>2.0.0-20240305.062514-14</appointments.version>
     <teleconsultation.version>2.0.0-20230831.113926-1</teleconsultation.version>
-    <cohort.version>3.7.1</cohort.version>
+    <cohort.version>3.7.2</cohort.version>
     <reporting.version>1.26.0</reporting.version>
     <reportingrest.version>1.14.0</reportingrest.version>
     <!-- the next three are required for reporting -->
@@ -46,9 +46,9 @@
     <htmlwidgets.version>1.11.0</htmlwidgets.version>
     <serialization-xstream.version>0.2.16</serialization-xstream.version>
     <ordertemplates.version>1.0.2</ordertemplates.version>
-    <patientflags.version>3.0.7</patientflags.version>
-    <o3forms.version>2.2.0</o3forms.version>
-    <emrapi.version>2.1.0-SNAPSHOT</emrapi.version>
+    <patientflags.version>3.0.8</patientflags.version>
+    <o3forms.version>2.3.0</o3forms.version>
+    <emrapi.version>2.1.0</emrapi.version>
     <event.version>2.10.0</event.version>
     <bedmanagement.version>6.0.0</bedmanagement.version>
     <!-- Stock Management and Billing -->
@@ -86,6 +86,12 @@
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
+      <artifactId>webservices.rest-omod</artifactId>
+      <version>${webservices.rest.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.openmrs.module</groupId>
       <artifactId>idgen-omod</artifactId>
       <version>${idgen.version}</version>
       <scope>provided</scope>
@@ -106,12 +112,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>metadatamapping-omod</artifactId>
       <version>${metadatamapping.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>metadatasharing-omod</artifactId>
-      <version>${metadatasharing.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -285,7 +285,7 @@
             <phase>package</phase>
             <configuration>
               <target>
-                <copy todir="${project.build.directory}/openmrs_config">
+                <copy todir="${project.build.directory}/sdk-distro/web/openmrs_config">
                   <fileset dir="${project.basedir}/configuration"/>
                 </copy>
               </target>
@@ -329,10 +329,13 @@
             <executions>
               <execution>
                 <id>validate-configurations</id>
-                <phase>validate</phase>
+                <phase>verify</phase>
                 <goals>
                   <goal>validate-configurations</goal>
                 </goals>
+                <configuration>
+                  <sourceDir>${project.build.directory}/sdk-distro/web/openmrs_config</sourceDir>
+                </configuration>
               </execution>
             </executions>
           </plugin>
