--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -25,20 +25,19 @@
          we do so here so that we can utilise Maven to track updates, etc. -->
     <fhir2.version>2.3.0-SNAPSHOT</fhir2.version>
     <authentication.version>1.0.0</authentication.version>
-    <openmrs.version>2.6.14-SNAPSHOT</openmrs.version>
-    <initializer.version>2.8.0</initializer.version>
-    <webservices.rest.version>2.48.0-SNAPSHOT</webservices.rest.version>
-    <addresshierarchy.version>2.19.0</addresshierarchy.version>
-    <idgen.version>4.14.0</idgen.version>
-    <legacyui.version>1.22.0-SNAPSHOT</legacyui.version>
+    <openmrs.version>2.6.5</openmrs.version>
+    <initializer.version>2.7.0</initializer.version>
+    <addresshierarchy.version>2.17.0</addresshierarchy.version>
+    <idgen.version>4.10.0</idgen.version>
+    <legacyui.version>1.16.0</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
-    <openconceptlab.version>2.4.0</openconceptlab.version>
-    <attachments.version>3.6.0</attachments.version>
-    <referencedemodata.version>2.5.0-SNAPSHOT</referencedemodata.version>
-    <queue.version>2.4.0</queue.version>
-    <appointments.version>2.0.0-20240305.062514-14</appointments.version>
+    <openconceptlab.version>2.3.0</openconceptlab.version>
+    <attachments.version>3.2.0</attachments.version>
+    <referencedemodata.version>2.4.0</referencedemodata.version>
+    <queue.version>2.4.0-SNAPSHOT</queue.version>
+    <appointments.version>2.0.0-SNAPSHOT</appointments.version>
     <teleconsultation.version>2.0.0-20230831.113926-1</teleconsultation.version>
-    <cohort.version>3.7.2</cohort.version>
+    <cohort.version>3.7.1</cohort.version>
     <reporting.version>1.26.0</reporting.version>
     <reportingrest.version>1.14.0</reportingrest.version>
     <!-- the next three are required for reporting -->
