--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,11 +68,13 @@ services:
   ##Flask api for llm
   llm-api:
     build:
-        context: .
+        context: ./llm
         dockerfile: Dockerfile
     restart: "unless-stopped"
     ports:
       - "5000:5000"
+    env_file:
+    - .env
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
 
