Update webservice module

--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -3,10 +3,12 @@ version=${project.version}
 war.openmrs=${openmrs.version}
 omod.initializer=${initializer.version}
 omod.fhir2=${fhir2.version}
+omod.webservices.rest=${webservices.rest.version}
 omod.idgen=${idgen.version}
 omod.legacyui=${legacyui.version}
 omod.addresshierarchy=${addresshierarchy.version}
 omod.metadatamapping=${metadatamapping.version}
+omod.metadatasharing=${metadatasharing.version}
 omod.openconceptlab=${openconceptlab.version}
 omod.referencedemodata=${referencedemodata.version}
 omod.attachments=${attachments.version}
