--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,10 +14,6 @@ http {
   add_header X-XSS-Protection "1; mode=block";
   # add_header Content-Security-Policy $csp_header;
   add_header X-Content-Type-Options nosniff;
-  add_header 'Access-Control-Allow-Origin' '*' always;
-  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-  add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-  add_header 'Access-Control-Allow-Credentials' 'true';
 
 
   proxy_set_header      HOST $host;
@@ -77,23 +73,6 @@ http {
     return 301 /openmrs/spa/;
   }
 
-  location /generate_summary {
-      if ($request_method = OPTIONS) {
-          add_header 'Access-Control-Allow-Origin' '*';
-          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-          add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-          add_header 'Access-Control-Allow-Credentials' 'true';
-          add_header 'Content-Length' 0;
-          add_header 'Content-Type' 'text/plain';
-          return 204;
-      }
-
-      proxy_pass http://backend:5000/generate_summary;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-  }
 }
 
 server {
@@ -106,10 +85,6 @@ server {
   add_header X-XSS-Protection "1; mode=block";
   # add_header Content-Security-Policy $csp_header;
   # add_header X-Content-Type-Options nosniff;
-  add_header 'Access-Control-Allow-Origin' '*' always;
-  add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-  add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
-  add_header 'Access-Control-Allow-Credentials' 'true';
 
   proxy_set_header      HOST $host;
   proxy_set_header      X-Forwarded-Proto $scheme;
@@ -167,6 +142,24 @@ server {
     location = / {
       return 301 /openmrs/spa/;
     }
+
+    location /generate_summary {
+      if ($request_method = OPTIONS) {
+          add_header 'Access-Control-Allow-Origin' '*';
+          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+          add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+          add_header 'Access-Control-Allow-Credentials' 'true';
+          add_header 'Content-Length' 0;
+          add_header 'Content-Type' 'text/plain';
+          return 204;
+      }
+
+      proxy_pass http://sjhc.intellisoftkenya.com:5000;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+  }
 
 }
 }
