SJT-173 Add Fast data entry and Form Render to the Admin Nav applications

--- a/frontend/config.json
+++ b/frontend/config.json
@@ -61,7 +61,8 @@
         "remove": [
           "dispensing-link",
           "forms-app-link",
-          "system-administration-app-menu-link"
+          "system-administration-app-menu-link",
+          "form-render-link"
         ]
       }
     }
