--- a/frontend/config.json
+++ b/frontend/config.json
@@ -333,5 +333,34 @@
             }
         }
     }
-}
+  },  
+  "@openmrs/esm-dispensing-app": {
+    "valueSets": {
+      "reasonForPause": {
+        "uuid": "2462a9d7-61fb-4bf5-9359-aedecb8d03cb"
+      },
+      "reasonForClose": {
+        "uuid": "2462a9d7-61fb-4bf5-9359-aedecb8d03cb"
+      }
+    },
+    "dispenseBehavior": {
+      "restrictTotalQuantityDispensed": true,
+      "allowModifyingPrescription": false
+    },
+    "enableStockDispense": true,
+    "validateBatch": true,
+    "Display conditions": {
+      "privileges": ["o3: View Dispensing Dashboard"]
+    },
+    "extensionSlots": {
+      "prescription-action-button-slot": {
+        "remove": ["dispense-action-button"],
+        "add": ["billing-test-order-action"]
+      }
+    },
+    "endVisitOnDispense": {
+      "enabled": true,
+      "visitTypesUuids": ["3371a4d4-f66f-4454-a86d-92c7b3da990c"]
+    }
+  }
 }
