--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -28,7 +28,7 @@
     <openmrs.version>2.6.5</openmrs.version>
     <initializer.version>2.7.0</initializer.version>
     <addresshierarchy.version>2.17.0</addresshierarchy.version>
-    <idgen.version>4.10.0</idgen.version>
+    <idgen.version>4.14.0</idgen.version>
     <legacyui.version>1.16.0</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
     <metadatasharing.version>1.9.0</metadatasharing.version>
@@ -48,12 +48,11 @@
     <ordertemplates.version>1.0.2</ordertemplates.version>
     <patientflags.version>3.0.7</patientflags.version>
     <o3forms.version>2.2.0</o3forms.version>
-    <emrapi.version>2.1.0</emrapi.version>
+    <emrapi.version>2.3.0</emrapi.version>
     <event.version>2.10.0</event.version>
-    <bedmanagement.version>6.0.0</bedmanagement.version>
+    <bedmanagement.version>6.1.0</bedmanagement.version>
     <!-- Stock Management and Billing -->
-    <stockmanagement.version>2.0.2-SNAPSHOT</stockmanagement.version>
-    <billing.version>1.2.0-SNAPSHOT</billing.version>
+    <stockmanagement.version>2.0.3</stockmanagement.version>
   </properties>
 
   <dependencies>
@@ -220,12 +219,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>stockmanagement-omod</artifactId>
       <version>${stockmanagement.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>billing-omod</artifactId>
-      <version>${billing.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
