--- a/frontend/config.json
+++ b/frontend/config.json
@@ -17,6 +17,14 @@
         "label": "Waiver"
       }
     ],
+    "postBilledItems": {
+      "cashPoint": "54065383-b4d4-42d2-af4d-d250a1fd2590",
+      "cashier": "f9badd80-ab76-11e2-9e96-0800200c9a66",
+      "priceUuid": "7b9171ac-d3c1-49b4-beff-c9902aee5245"
+    },
+    "cashPointUuid": "54065383-b4d4-42d2-af4d-d250a1fd2590",
+    "cashierUuid": "f9badd80-ab76-11e2-9e96-0800200c9a66",
+    "enforceBillPayment": true,
     "patientExemptionCategories": [
       {
         "value": "IN_PRISON",
