--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -44,7 +44,8 @@
     "@ehospital/esm-patient-visits-report-app": "next",
     "@ehospital/esm-login-app": "next",
     "@ehospital/esm-ai-model-app": "next",
-    "@ehospital/esm-messages-app": "next"
+    "@ehospital/esm-messages-app": "next",
+    "@openmrs/esm-reports-app": "next"
   },
   "excludedFrontendModules": []
 }
