--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -36,12 +36,18 @@
     <attachments.version>3.2.0</attachments.version>
     <referencedemodata.version>2.4.0</referencedemodata.version>
     <queue.version>2.4.0-SNAPSHOT</queue.version>
-    <appointments.version>2.0.0-SNAPSHOT</appointments.version>
+    <appointments.version>2.1.0-20250318.070530-1</appointments.version>
     <teleconsultation.version>2.0.0-20230831.113926-1</teleconsultation.version>
     <cohort.version>3.7.1</cohort.version>
-    <reporting.version>1.26.0</reporting.version>
-    <reportingrest.version>1.14.0</reportingrest.version>
-    <!-- the next three are required for reporting -->
+    <!-- start required for reporting -->
+    <reporting.version>1.28.0</reporting.version>
+    <reportingrest.version>1.15.0</reportingrest.version>
+    <appframework.version>2.18.0</appframework.version>
+    <appui.version>1.18.0</appui.version>
+    <reportingui.version>1.13.0</reportingui.version>
+    <uicommons.version>2.26.0</uicommons.version>
+    <uiframework.version>4.0.0</uiframework.version>
+    <!-- end required for reporting -->
     <calculation.version>1.3.0</calculation.version>
     <htmlwidgets.version>1.11.0</htmlwidgets.version>
     <serialization-xstream.version>0.2.16</serialization-xstream.version>
@@ -49,8 +55,8 @@
     <patientflags.version>3.0.7</patientflags.version>
     <o3forms.version>2.2.0</o3forms.version>
     <emrapi.version>2.3.0</emrapi.version>
-    <event.version>2.10.0</event.version>
-    <bedmanagement.version>6.1.0</bedmanagement.version>
+    <event.version>3.0.0</event.version>
+    <bedmanagement.version>6.2.0-SNAPSHOT</bedmanagement.version>
     <!-- Stock Management and Billing -->
     <stockmanagement.version>2.0.3</stockmanagement.version>
   </properties>
