--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.openmrs.distro</groupId>
-    <artifactId>referenceapplication</artifactId>
-    <version>3.3.0-SNAPSHOT</version>
+    <groupId>org.openmrs</groupId>
+    <artifactId>distro-emr</artifactId>
+    <version>3.6.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>referenceapplication-distro</artifactId>
+  <artifactId>distro-emr-configuration</artifactId>
   <name>OpenMRS distro</name>
   <packaging>pom</packaging>
 
@@ -29,7 +29,7 @@
     <initializer.version>2.7.0</initializer.version>
     <addresshierarchy.version>2.17.0</addresshierarchy.version>
     <idgen.version>4.14.0</idgen.version>
-    <legacyui.version>1.16.0</legacyui.version>
+    <legacyui.version>1.23.0</legacyui.version>
     <metadatamapping.version>1.6.0</metadatamapping.version>
     <metadatasharing.version>1.9.0</metadatasharing.version>
     <openconceptlab.version>2.3.0</openconceptlab.version>
