--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openmrs.distro</groupId>
-  <artifactId>referenceapplication</artifactId>
+  <groupId>org.openmrs</groupId>
+  <artifactId>distro-emr</artifactId>
   <name>Package and Run OpenMRS</name>
   <description>Convenient project to build an OpenMRS distribution and run it</description>
 
-  <version>3.3.0-SNAPSHOT</version>
+  <version>3.6.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <organization>
@@ -109,12 +109,13 @@
         <plugin>
           <groupId>org.openmrs.maven.plugins</groupId>
           <artifactId>openmrs-sdk-maven-plugin</artifactId>
-          <version>4.5.0</version>
+          <version>6.1.0-SNAPSHOT</version>
+
         </plugin>
         <plugin>
           <groupId>org.openmrs.maven.plugins</groupId>
           <artifactId>openmrs-packager-maven-plugin</artifactId>
-          <version>1.7.0</version>
+          <version>1.9.0-SNAPSHOT</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -159,7 +160,7 @@
     <repository>
       <id>sonatype-nexus-snapshots</id>
       <name>Sonatype Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <url>https://central.sonatype.com/repository/maven-snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
