--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -2,22 +2,22 @@
   "frontendModules": {
     "@openmrs/esm-devtools-app": "next",
     "@openmrs/esm-implementer-tools-app": "next",
-    "@openmrs/esm-primary-navigation-app": "next",
+    "@openmrs/esm-primary-navigation-app": "7.0.1-pre.3259",
     "@openmrs/esm-home-app": "next",
-    "@openmrs/esm-form-engine-app": "next",
-    "@openmrs/esm-generic-patient-widgets-app": "next",
+    "@openmrs/esm-form-engine-app": "10.2.1-pre.8181",
+    "@openmrs/esm-generic-patient-widgets-app": "10.2.0",
     "@openmrs/esm-patient-allergies-app": "next",
     "@openmrs/esm-patient-attachments-app": "next",
-    "@openmrs/esm-patient-banner-app": "next",
-    "@openmrs/esm-patient-chart-app": "next",
+    "@openmrs/esm-patient-banner-app": "10.2.0",
+    "@openmrs/esm-patient-chart-app": "10.2.1-pre.8209",
     "@openmrs/esm-patient-conditions-app": "next",
-    "@openmrs/esm-patient-forms-app": "next",
+    "@openmrs/esm-patient-forms-app": "10.2.1-pre.8209",
     "@openmrs/esm-patient-medications-app": "next",
-    "@openmrs/esm-patient-notes-app": "next",
-    "@openmrs/esm-patient-orders-app": "next",
-    "@openmrs/esm-patient-vitals-app": "next",
-    "@openmrs/esm-active-visits-app": "next",
-    "@openmrs/esm-appointments-app": "next",
+    "@openmrs/esm-patient-notes-app": "10.2.0",
+    "@openmrs/esm-patient-orders-app": "10.2.0",
+    "@openmrs/esm-patient-vitals-app": "10.2.1-pre.8168",
+    "@openmrs/esm-active-visits-app": "9.0.1-pre.6350",
+    "@openmrs/esm-appointments-app": "8.5.1-pre.5776",
     "@openmrs/esm-patient-search-app": "next",
     "@openmrs/esm-openconceptlab-app": "next",
     "@openmrs/esm-system-admin-app": "next",
@@ -41,7 +41,8 @@
     "@ehospital/esm-admin-nav-app": "next",
     "@ehospital/esm-import-export-app": "next",
     "@ehospital/esm-patient-visits-report-app": "next",
-    "@ehospital/esm-login-app": "next",
+    "@careconnect/esm-login-app": "0.0.1",
+    "@careconnect/esm-ncd-provider-app": "0.0.3",
     "@ehospital/esm-ai-model-app": "next",
     "@ehospital/esm-messages-app": "next",
     "@ehospital/esm-patient-flags-app": "next",
